# Drone-Papers

./: README.md  指令.txt
工作空间/devel/: .catkin  local_setup.sh  setup.sh
工作空间/devel/include/ego_planner/: Bspline.h  DataDisp.h
工作空间/devel/include/quadrotor_msgs/: SimDebug.h
工作空间/devel/lib/ego_planner/: traj_server
工作空间/devel/lib/local_sensing_node/: pcl_render_node
工作空间/devel/lib/map_generator/: random_complex_generator
工作空间/devel/lib/min_snap/: min_snap_generator
工作空间/devel/lib/multi_map_server/: multi_map_visualization
工作空间/devel/lib/my_visualization/: min_snap_visual
工作空间/devel/lib/odom_visualization/: odom_visualization
论文代码/: 250配置.md
论文代码/FUEL/FIS更新/: updateMap.m
论文代码/FUEL/无人机软约束轨迹/: README.md  costFunction.m  main.m
论文代码/FUEL/最小时间B样条轨迹/: basis_function.m
论文代码/FUEL/软约束轨迹/: trajectory_planning.m
论文代码/ego planner/: ego_planner代码精讲理论部分参考链接_20230518_220202.txt  相关问题回答.docx
论文代码/rrt3-d/: CollisionChecking_3d.m  RRT_3d.m
论文代码/曲线/B样条/: basis_function.m  bspline_curve.m
论文代码/曲线/贝塞尔曲线/: bezier_curve.m  different_t.m  main.m  readme.md
论文复现/FUEL/FIS更新/: generateViewpointsAndUpdateCosts.m  main.m  visualizeMapAndFrontiers.m
论文复现/FUEL/无人机软约束轨迹/: nonlinearConstraints.m
论文复现/FUEL/最小时间B样条轨迹/: bspline_curve.m  bspline_deboor.m  main.m  penalty.m  trajectoryCost.m
论文复现/FUEL/软约束轨迹/: costFunction.m  nonlinearConstraints.m  readme.md  readme_CN.md
论文复现/ego planner/源码解析/planner/plan_env/: CMakeLists.txt
论文复现/rrt3-d/: PriorityQueue.m
论文复现/曲线/B样条/: main.m  readme.md
论文复现/曲线/拉格朗日插值/: lagrange_basis.m  lagrange_interpolation.m  main.m  readme.md
论文笔记/COL/: Framework.md
论文笔记/Fuel/: Fuel.md  代码笔记.md
论文笔记/Fuel/代码笔记/: 代码笔记.md
论文笔记/卡尔曼滤波/: test.py
(+103 files in other folders)
